# gtools

./: .gitignore  Cargo.toml  README.md  install.bat  install.sh  jx  pyproject.toml
.github/workflows/: release.yml
conda/recipe/: meta.yaml
doc/: README_zh.html  README_zh.md  docker.sh  gwas.doc.txt  unix.sh  windows.bat
example/: main.tmp.ipynb  mouse_hs1940.idv  mouse_hs1940.npz  mouse_hs1940.pheno  mouse_hs1940.snp
ext/geno2phylip/: Cargo.toml  pyproject.toml
ext/geno2phylip/src/: core.rs
ext/geno2phylip/src/readers/: mod.rs  npz.rs  plink.rs  vcf.rs
ext/gfreader_rs/src/: lib.rs
ext/glm_rs/: Cargo.toml  pyproject.toml
ext/glm_rs/src/: lib.rs
fig/: logo.txt
module/: _gfreader.py  cpheno.py  gformat.py  grm.py  gs.py  gwas.py  gwasplot.py  main.py  pca.py  postGWAS.py  transanno.py
module/_common/: log.py
python/JanusX/bioplotkit/: pcshow.py
python/JanusX/pyBLUP/: QK2.py  assoc.py
python/JanusX/script/: JanusX.py  grm.py  gs.py  gwas.py  pca.py  postGWAS.py  sim.py
rust/JanusX_rs/python/JanusX_rs/: assoc.py  rEVD.py
rust/gfreader_rs/: pyproject.toml
rust/gfreader_rs/python/gfreader_rs/: __init__.py  _gfreader.py
rust/gfreader_rs/src/: lib.rs
src/: assoc.rs  gmerge.rs  lib.rs  svd.rs
src/bioplotkit/: manhanden.py
src/ext/: __init__.py  downloader.py  iqtree.py
src/gfreader/: __init__.py  base.py
src/pyBLUP/: QK2.py  __init__.py  cpu_inspect.py  farmcpu.py  glmrc.py  gwas.py
src/rust2py/: assoc.py  g2phy.py  gfreader.py
src/script/: JanusX.py  ext.py  grm.py  gwas.py  gwas2.py  pca.py  phylogeny.py  postGWAS.py  sim.py
todo/geno2phylip/python/geno2phy/: __init__.py  _g2phy.py
todo/geno2phylip/src/: lib.rs  writers.rs
