[project]
name = "JanusX"
version = "0.1.0"
description = "A Suite of Genotyping Tools"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "numpy",
    "pandas",
    "scipy",
    "matplotlib",
    "plotly", # For pcshow.py
    "psutil",
    "tqdm",
    "joblib>=1.5.2",
    "memory_profiler",
    "bed-reader==1.0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
index-url = "https://pypi.tuna.tsinghua.edu.cn/simple"
python-install-mirror = "https://registry.npmmirror.com/-/binary/python-build-standalone/"

[tool.hatch.build.targets.wheel]
packages = ["src/pyBLUP","src/gfreader","src/bioplotkit"]