[project]
name = "JanusX"
version = "1.0.0"
description = "A Suite of Genotyping Tools for Genome-Wide Association Study and Genomic Selection"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "numpy",
    "pandas",
    "scipy",
    "scikit-learn",
    "matplotlib",
    "plotly", # For pcshow.py
    "psutil",
    "tqdm",
    "joblib>=1.5.2",
    "bed-reader==1.0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
index-url = "https://pypi.tuna.tsinghua.edu.cn/simple"
python-install-mirror = "https://registry.npmmirror.com/-/binary/python-build-standalone/"

[tool.hatch.build.targets.wheel]
packages = ["src/pyBLUP","src/gfreader","src/bioplotkit"]