[package]
name = "geno2phy"
version = "0.1.0"
edition = "2021"

[lib]
name = "geno2phy"
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
rand = "0.8"

# Python binding
pyo3 = { version = "0.22", features = ["extension-module"] }

# Writing
# (std::io::BufWriter 就够，不需要额外依赖)

# NPZ/NPY
ndarray = "0.16"
ndarray-npy = "0.9"
zip = "2.2"
flate2 = "1.0"
# VCF via htslib
rust-htslib = "0.47"

# Parsing .bim/.fam
csv = "1.3"